--- a/styles/base.css
+++ b/styles/base.css
@@ -1,3 +1,26 @@
+.slidev-layout.cover h1 {
+  color: #ffb733;
+}
+
+h2 {
+  color: #ffd500;
+}
+
+h2:after {
+  content: " ";
+  display: block;
+  margin: 2px;
+  border: 0.5px dashed;
+}
+
+.slidev-layout :not(pre) > code {
+  color: #9370db;
+}
+
+h3 {
+  color: #33ccff;
+}
+
 strong {
   color: #ffa500;
 }
